--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 	<link rel="preload" href="./fonts/Poppins-Medium.woff" as="font" type="font/woff" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-Regular.woff" as="font" type="font/woff" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-SemiBold.woff" as="font" type="font/woff" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
-	<link rel="stylesheet" href="/css/main.min.css">
+	<link rel="stylesheet" href="./css/main.min.css">
 </head>
 
 	<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="display:none"><symbol id="add" viewBox="0 0 14.7 14">
