--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 		<div class="nav__logo">
 			<a href="#">
 				<picture>
-					<source srcset="/images/index/avtr.avif">
-					<img src="/images/index/avtr.png" alt="avatar" width="43" height="43">
+					<source srcset="./images/index/avtr.avif">
+					<img src="./images/index/avtr.png" alt="avatar" width="43" height="43">
 				</picture>
 				<span>name</span>
 			</a>
