--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="ru">
-
-	<head>
+<head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -29,23 +28,24 @@
 	<link rel="stylesheet" href="./css/main.min.css">
 </head>
 
-	<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="display:none"><symbol id="add" viewBox="0 0 14.7 14">
-  <path class="bbst0" d="M6.6 6.3H.7c-.4 0-.7.3-.7.7s.3.7.7.7h5.9v5.5c0 .5.4.8.8.8s.7-.3.7-.7V7.7H14c.4 0 .7-.3.7-.7s-.3-.7-.7-.7H8.1V.7c0-.4-.3-.7-.7-.7-.4 0-.8.3-.8.7v5.6z"/>
-</symbol><symbol id="arrow-right" viewBox="0 0 12 12"><g fill="none">
-<path d="M6.19265 10.5L10.7241 6L6.19265 1.5M10.0948 6H0.905939" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="display:none"><symbol id="arrow-right" viewBox="0 0 24 20"><g fill="none">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M0 10C0 9.44771 0.447715 9 1 9H23C23.5523 9 24 9.44771 24 10C24 10.5523 23.5523 11 23 11H1C0.447715 11 0 10.5523 0 10Z" fill="#3B88FB"/>
+<path fill-rule="evenodd" clip-rule="evenodd" d="M13.2929 0.292893C13.6834 -0.0976311 14.3166 -0.0976311 14.7071 0.292893L23.7071 9.29289C24.0976 9.68342 24.0976 10.3166 23.7071 10.7071L14.7071 19.7071C14.3166 20.0976 13.6834 20.0976 13.2929 19.7071C12.9024 19.3166 12.9024 18.6834 13.2929 18.2929L21.5858 10L13.2929 1.70711C12.9024 1.31658 12.9024 0.683417 13.2929 0.292893Z" fill="#3B88FB"/>
+</g></symbol><symbol id="arrow-small" viewBox="0 0 10 18"><g fill="none">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M0.46967 0.96967C0.762563 0.676777 1.23744 0.676777 1.53033 0.96967L9.03033 8.46967C9.32322 8.76256 9.32322 9.23744 9.03033 9.53033L1.53033 17.0303C1.23744 17.3232 0.762563 17.3232 0.46967 17.0303C0.176777 16.7374 0.176777 16.2626 0.46967 15.9697L7.43934 9L0.46967 2.03033C0.176777 1.73744 0.176777 1.26256 0.46967 0.96967Z" fill="#3B88FB"/>
 </g></symbol></svg>
 
-	<body>
-		<div class="container">
-			<header>
+<body>
+	<div class="container"><header>
+
 	<nav>
 		<div class="nav__logo">
 			<a href="#">
 				<picture>
-					<source srcset="./images/index/avtr.avif">
-					<img src="./images/index/avtr.png" alt="avatar" width="43" height="43">
+					<source srcset="/images/index/avtr.avif">
+					<img src="/images/index/avtr.png" alt="avatar" width="43" height="43">
 				</picture>
-				<span>name</span>
+				<span>userName</span>
 			</a>
 		</div>
 
@@ -54,28 +54,109 @@
 				<svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<path d="M12.5559 10.906L12.1009 11.359C12.1009 11.359 11.0179 12.435 8.06288 9.49698C5.10788 6.55898 6.19088 5.48298 6.19088 5.48298L6.47688 5.19698C7.18388 4.49498 7.25088 3.36698 6.63388 2.54298L5.37388 0.859979C4.60988 -0.160021 3.13488 -0.29502 2.25988 0.57498L0.68988 2.13498C0.25688 2.56698 -0.0331206 3.12498 0.00187944 3.74498C0.0918794 5.33198 0.809879 8.74498 4.81388 12.727C9.06088 16.949 13.0459 17.117 14.6749 16.965C15.1909 16.917 15.6389 16.655 15.9999 16.295L17.4199 14.883C18.3799 13.93 18.1099 12.295 16.8819 11.628L14.9719 10.589C14.1659 10.152 13.1859 10.28 12.5559 10.906Z" fill="#3B88FB"/>
 				</svg>
-				<span>+998 55 503 11 99</span>
 			</a>
 
-			<a href="#" class="nav__bot">@yumecsinfo_bot</a>
+			<a href="#" class="nav__bot">@yumecs</a>
 		</div>
 	</nav>
 
 </header>
+</div>
 
-	    </div>
-			<div class="page-links">
-	<a class="active" href="#">Главная</a>
-	<a href="#">О нас</a>
-	<a href="#">Услуги</a>
-	<a href="#">Тарифы</a>
-	<a href="#">Условия</a>
-	<a href="#">Интернет магазины</a>
-	<a href="#">FAQ</a>
-	<a href="#">Сотрудники</a>
+	<div class="links-container swiper-container">
+	<div class="swiper-wrapper page-links">
+		<a class="swiper-slide active" href="#">Главная</a>
+		<a class="swiper-slide" href="#">О нас</a>
+		<a class="swiper-slide" href="#">Услуги</a>
+		<a class="swiper-slide" href="#">Тарифы</a>
+		<a class="swiper-slide" href="#">Условия</a>
+		<a class="swiper-slide" href="#">Интернет магазины</a>
+		<a class="swiper-slide" href="#">FAQ</a>
+		<a class="swiper-slide" href="#">Сотрудники</a>
+	</div>
 </div>
 
 
-		<script type="module" src="./js/main.min.js"></script>
-	</body>
+	<div class="container">
+
+		<section class="points">
+	
+	<a href="#" class="points-count points-col1">
+		<b>баллы</b>
+		<svg width="9" height="17">
+			<use xlink:href="#arrow-small"></use>
+		</svg>
+		<span>0</span>
+	</a>
+
+	<a href="#" class="choise">
+		<h1>Выбирай и заказывай сейчас</h1>
+		<span>
+			<svg width="24" height="20">
+				<use xlink:href="#arrow-right"></use>
+			</svg>
+		</span>
+	</a>
+
+	<a href="#" class="points-count points-col2">
+		<b>Зови Друзей</b>
+		<svg width="9" height="17">
+			<use xlink:href="#arrow-small"></use>
+		</svg>
+		<p>Набирай баллы с помощью друзей</p>
+	</a>
+
+</section>
+
+		<a href="#" class="calculation">
+	<p>рассчитать стоимость товара</p>
+	<svg width="9" height="17">
+		<use xlink:href="#arrow-small"></use>
+	</svg>
+</a>
+
+		<section class="slider swiper">
+
+	<div class="pagination">
+		<span class="swiper-pagination-bullet"></span>
+		<span class="swiper-pagination-bullet"></span>
+		<span class="swiper-pagination-bullet"></span>
+		<span class="swiper-pagination-bullet"></span>
+	</div>
+
+	<div class="swiper-wrapper slider__wrapper">
+		<div class="swiper-slide slider__img">
+			<picture>
+				<source srcset="./images/advert1.avif">
+				<img src="./images/advert1.jpg" alt="advert" width="400" height="300">
+			</picture>
+		</div>
+		<div class="swiper-slide slider__img">
+			<picture>
+				<source srcset="./images/advert2.avif">
+				<img src="./images/advert2.jpg" alt="advert" width="400" height="300">
+			</picture>
+		</div>
+		<div class="swiper-slide slider__img">
+			<picture>
+				<source srcset="./images/advert1.avif">
+				<img src="./images/advert1.jpg" alt="advert" width="400" height="300">
+			</picture>
+		</div>
+		<div class="swiper-slide slider__img">
+			<picture>
+				<source srcset="./images/advert2.avif">
+				<img src="./images/advert2.jpg" alt="advert" width="400" height="300">
+			</picture>
+		</div>
+	</div>
+
+</section>
+
+		
+	</div>
+
+	<script type="module" src="./js/main.min.js"></script>
+</body>
+
 </html>
