--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -13,7 +13,8 @@
 		@@include('../components/points.html')
 		@@include('../components/calculation.html')
 		@@include('../components/slider.html')
-		
+		@@include('../components/tabs.html')
+
 	</div>
 
 	<script type="module" src="./js/main.min.js"></script>
