--- a/index.html
+++ b/index.html
@@ -153,7 +153,116 @@
 
 </section>
 
-		
+		<section class="tabs">
+	<div class="tabs__links">
+		<button class="active tabs__link" data-tab="order">Активные</button>
+		<button class="tabs__link" data-tab="history">история</button>
+		<span class="tabs__bg"></span>
+	</div>
+
+	<div class="active tabs__about" data-tab-content="order">
+		<div class="tabs__about-head">
+			<h3>Закааз</h3>
+			<p>Трекер доставки </p>
+		</div>
+		<div class="tabs__about-info">
+			<div class="point-decor"></div>
+			<b>Принят на Склад</b>
+			<span>12 Марта</span>
+		</div>
+		<div class="tabs__about-info">
+			<div class="point-decor"></div>
+			<b>Упакован и Оформлен</b>
+			<span>12 Марта</span>
+		</div>
+		<div class="tabs__about-info in-active">
+			<div class="point-decor"></div>
+			<b>Отправлен</b>
+			<span>12 Марта</span>
+		</div>
+		<div class="tabs__about-info in-active">
+			<div class="point-decor"></div>
+			<b>В Пути</b>
+			<span>12 Марта</span>
+		</div>
+		<div class="tabs__about-info in-active">
+			<div class="point-decor"></div>
+			<b>На Таможне</b>
+			<span>12 Марта</span>
+		</div>
+		<div class="tabs__about-info in-active">
+			<div class="point-decor"></div>
+			<b>Статус Оплачен</b>
+			<span>12 Марта</span>
+		</div>
+		<div class="tabs__about-info in-active">
+			<div class="point-decor"></div>
+			<b>Готов к выдаче!</b>
+			<span>12 Марта</span>
+		</div>
+		<div class="tabs__about-info in-active">
+			<div class="point-decor"></div>
+			<b>На Доставке</b>
+			<span>12 Марта</span>
+		</div>
+		<div class="tabs__about-info in-active">
+			<div class="point-decor"></div>
+			<b>Доставлен</b>
+			<span>12 Марта</span>
+		</div>
+	</div>
+
+	<div class="tabs__about" data-tab-content="history">
+		<h3>Ваши заказы</h3>
+
+		<div class="tabs__about-history">
+			<div class="tabs__about-history-head">
+				<p>номер заказа</p>
+				<span>Статус</span>
+			</div>
+			<div class="tabs__about-history-bottom">
+				<b>#999993</b>
+				<span>Доставлен</span>
+			</div>
+		</div>
+
+		<div class="tabs__about-history">
+			<div class="tabs__about-history-head">
+				<p>номер заказа</p>
+				<span>Статус</span>
+			</div>
+			<div class="tabs__about-history-bottom">
+				<b>#999993</b>
+				<span class="cansel">Доставлен</span>
+			</div>
+		</div>
+
+		<div class="tabs__about-history">
+			<div class="tabs__about-history-head">
+				<p>номер заказа</p>
+				<span>Статус</span>
+			</div>
+			<div class="tabs__about-history-bottom">
+				<b>#999993</b>
+				<span>Доставлен</span>
+			</div>
+		</div>
+
+		<div class="tabs__about-history">
+			<div class="tabs__about-history-head">
+				<p>номер заказа</p>
+				<span>Статус</span>
+			</div>
+			<div class="tabs__about-history-bottom">
+				<b>#999993</b>
+				<span>Доставлен</span>
+			</div>
+		</div>
+
+	</div>
+</section>
+
+
 	</div>
 
 	<script type="module" src="./js/main.min.js"></script>
