--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -6,7 +6,19 @@
 <body>
 	<div class="container">@@include('../components/header.html')</div>
 
-	@@include('../components/page-links.html')
+	<div class="swiper-container links-container">
+		<div class="page-links swiper-wrapper">
+			<a class="swiper-slide active" href="/index.html">Главная</a>
+			<a class="swiper-slide" href="/about.html">О нас</a>
+			<a class="swiper-slide" href="#">Услуги</a>
+			<a class="swiper-slide" href="#">Тарифы</a>
+			<a class="swiper-slide" href="#">Условия</a>
+			<a class="swiper-slide" href="#">Интернет магазины</a>
+			<a class="swiper-slide" href="#">FAQ</a>
+			<a class="swiper-slide" href="#">Сотрудники</a>
+		</div>
+	</div>
+
 
 	<div class="container">
 
