--- a/order.html
+++ b/order.html
@@ -1,10 +1,6 @@
 <!doctype html>
-<html lang="en">
-
+<html lang="ru">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -25,14 +21,14 @@
 	<meta name="theme-color" content="#0a0428">
 	<meta name="format-detection" content="telephone=no, date=no, address=no, email=no">
 
-	<title>О нас</title>
+	<title>Главная</title>
 
 	<link rel="preload" href="./fonts/Poppins-Medium.woff" as="font" type="font/woff" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-Regular.woff" as="font" type="font/woff" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-SemiBold.woff" as="font" type="font/woff" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
 	<link rel="stylesheet" href="./css/main.min.css">
 </head>
 
-	<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="display:none"><symbol id="arrow-left" viewBox="0 0 24 20"><g fill="none">
+<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="display:none"><symbol id="arrow-left" viewBox="0 0 24 20"><g fill="none">
 <path fill-rule="evenodd" clip-rule="evenodd" d="M1.49012e-08 10C1.49012e-08 9.44771 0.447715 9 1 9H23C23.5523 9 24 9.44771 24 10C24 10.5523 23.5523 11 23 11H1C0.447715 11 1.49012e-08 10.5523 1.49012e-08 10Z" fill="black"/>
 <path fill-rule="evenodd" clip-rule="evenodd" d="M10.7071 0.292893C11.0976 0.683417 11.0976 1.31658 10.7071 1.70711L2.41421 10L10.7071 18.2929C11.0976 18.6834 11.0976 19.3166 10.7071 19.7071C10.3166 20.0976 9.68342 20.0976 9.29289 19.7071L0.292893 10.7071C-0.0976311 10.3166 -0.0976311 9.68342 0.292893 9.29289L9.29289 0.292893C9.68342 -0.0976311 10.3166 -0.0976311 10.7071 0.292893Z" fill="black"/>
 </g></symbol><symbol id="arrow-right" viewBox="0 0 24 20"><g fill="none">
@@ -47,135 +43,37 @@
 <path fill-rule="evenodd" clip-rule="evenodd" d="M16.0566 8.00166C16.3664 8.32634 16.3543 8.84064 16.0296 9.15039L10.0679 14.8379C9.75376 15.1376 9.25955 15.1373 8.94569 14.8374L5.96991 11.9937C5.64549 11.6836 5.63382 11.1693 5.94384 10.8449C6.25387 10.5205 6.76818 10.5088 7.0926 10.8188L9.50751 13.1266L14.9079 7.97462C15.2326 7.66487 15.7469 7.67698 16.0566 8.00166Z" fill="#3DC03C"/>
 <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.0625C6.06395 2.0625 2.0625 6.06395 2.0625 11C2.0625 15.936 6.06395 19.9375 11 19.9375C15.936 19.9375 19.9375 15.936 19.9375 11C19.9375 6.06395 15.936 2.0625 11 2.0625ZM0.4375 11C0.4375 5.16649 5.16649 0.4375 11 0.4375C16.8335 0.4375 21.5625 5.16649 21.5625 11C21.5625 16.8335 16.8335 21.5625 11 21.5625C5.16649 21.5625 0.4375 16.8335 0.4375 11Z" fill="#3DC03C"/>
 </g></symbol></svg>
-</head>
 
 <body>
-	<div class="container"><header>
-
-	<nav>
-		<div class="nav__logo">
-			<a href="#">
-				<picture>
-					<source srcset="/images/index/avtr.avif">
-					<img src="/images/index/avtr.png" alt="avatar" width="43" height="43">
-				</picture>
-				<span>userName</span>
-			</a>
-		</div>
-
-		<div class="nav__links">
-			<a href="tel:+998555031199" class="nav__phone">
-				<svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-					<path d="M12.5559 10.906L12.1009 11.359C12.1009 11.359 11.0179 12.435 8.06288 9.49698C5.10788 6.55898 6.19088 5.48298 6.19088 5.48298L6.47688 5.19698C7.18388 4.49498 7.25088 3.36698 6.63388 2.54298L5.37388 0.859979C4.60988 -0.160021 3.13488 -0.29502 2.25988 0.57498L0.68988 2.13498C0.25688 2.56698 -0.0331206 3.12498 0.00187944 3.74498C0.0918794 5.33198 0.809879 8.74498 4.81388 12.727C9.06088 16.949 13.0459 17.117 14.6749 16.965C15.1909 16.917 15.6389 16.655 15.9999 16.295L17.4199 14.883C18.3799 13.93 18.1099 12.295 16.8819 11.628L14.9719 10.589C14.1659 10.152 13.1859 10.28 12.5559 10.906Z" fill="#3B88FB"/>
-				</svg>
-			</a>
-
-			<a href="#" class="nav__bot">@yumecs</a>
-		</div>
-	</nav>
-
-</header>
-</div>
-
-	<div class="links-container swiper-container">
-		<div class="page-links swiper-wrapper">
-			<a class="swiper-slide active" href="/about.html">О нас</a>
-			<a class="swiper-slide" href="/index.html">Главная</a>
-			<a class="swiper-slide" href="#">Услуги</a>
-			<a class="swiper-slide" href="#">Тарифы</a>
-			<a class="swiper-slide" href="#">Условия</a>
-			<a class="swiper-slide" href="#">Интернет магазины</a>
-			<a class="swiper-slide" href="#">FAQ</a>
-			<a class="swiper-slide" href="#">Сотрудники</a>
-		</div>
-	</div>
 
 	<div class="container">
+		
+		<header>
+			<nav class="nav-order">
 
-		<div class="about-image">
-			<picture>
-				<source srcset="./images/advert2.avif">
-				<img src="./images/advert2.jpg" alt="О нас" width="400" height="318">
-			</picture>
-		</div>
-
-		<section class="about">
-
-			<h1>О компании</h1>
-
-			<p><span>YUMECS —</span> доставка посылок грузов и интернет заказов легко
-				и удобно. Услуги осуществляются любым удобным для Вас способом: авиа, авто.Доставляем из России, Турции,
-				США, Кореи, Китая, Малайзии и Японии по всему Узбекистану
-			</p>
-
-			<div class="about__desc">
-				<svg width="21" height="21">
-					<use xlink:href="#success"></use>
+				<svg width="24" height="20">
+					<use xlink:href="#arrow-left"></use>
 				</svg>
-				<p>Система оповещения</p>
-			</div>
 
-			<div class="about__desc">
-				<svg width="21" height="21">
-					<use xlink:href="#success"></use>
+				<svg width="20" height="20">
+					<use xlink:href="#close"></use>
 				</svg>
-				<p>Пунктуальность</p>
+
+			</nav>
+
+			<div class="links-container swiper-container">
+				<div class="page-links swiper-wrapper">
+					<a class="swiper-slide active" href="#">Главная</a>
+					<a class="swiper-slide" href="#">О нас</a>
+					<a class="swiper-slide" href="#">Услуги</a>
+					<a class="swiper-slide" href="#">Тарифы</a>
+					<a class="swiper-slide" href="#">Условия</a>
+					<a class="swiper-slide" href="#">Интернет магазины</a>
+					<a class="swiper-slide" href="#">FAQ</a>
+					<a class="swiper-slide" href="#">Сотрудники</a>
+				</div>
 			</div>
-
-			<div class="about__desc">
-				<svg width="21" height="21">
-					<use xlink:href="#success"></use>
-				</svg>
-				<p>Безопасность</p>
-			</div>
-
-			<div class="about__desc">
-				<svg width="21" height="21">
-					<use xlink:href="#success"></use>
-				</svg>
-				<p>Отличный сервис</p>
-			</div>
-
-			<div class="about__desc">
-				<svg width="21" height="21">
-					<use xlink:href="#success"></use>
-				</svg>
-				<p>Таможенно правовое сопровождение</p>
-			</div>
-
-		</section>
-
-		<section class="partners">
-
-			<h3>Партнеры</h3>
-
-			<div class="partners-wrapper">
-				<a href="#">
-					<picture>
-						<source srcset="./images/partners1.avif">
-						<img src="./images/partners1.jpg" alt="наши портнеры" width="137" height="67">
-					</picture>
-				</a>
-				<a href="#">
-					<picture>
-						<source srcset="./images/partners2.avif">
-						<img src="./images/partners2.jpg" alt="наши портнеры" width="140" height="70">
-					</picture>
-				</a>
-				<a href="#">
-					<picture>
-						<source srcset="./images/partners3.avif">
-						<img src="./images/partners3.jpg" alt="наши портнеры" width="137" height="67">
-					</picture>
-				</a>
-				<a href="#">
-					<picture>
-						<source srcset="./images/partners4.avif">
-						<img src="./images/partners4.jpg" alt="наши портнеры" width="140" height="70">
-					</picture>
-				</a>
-			</div>
-		</section>
+		</header>
 
 	</div>
 
