--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -11,7 +11,7 @@
 			<a class="swiper-slide active" href="/index.html">Главная</a>
 			<a class="swiper-slide" href="/about.html">О нас</a>
 			<a class="swiper-slide" href="#">Услуги</a>
-			<a class="swiper-slide" href="#">Тарифы</a>
+			<a class="swiper-slide" href="/tarifs.html">Тарифы</a>
 			<a class="swiper-slide" href="#">Условия</a>
 			<a class="swiper-slide" href="#">Интернет магазины</a>
 			<a class="swiper-slide" href="#">FAQ</a>
