--- a/tarifs.html
+++ b/tarifs.html
@@ -1,10 +1,6 @@
 <!doctype html>
-<html lang="en">
-
+<html lang="ru">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -25,14 +21,14 @@
 	<meta name="theme-color" content="#0a0428">
 	<meta name="format-detection" content="telephone=no, date=no, address=no, email=no">
 
-	<title>О нас</title>
+	<title>Тарифы</title>
 
 	<link rel="preload" href="./fonts/Poppins-Medium.woff" as="font" type="font/woff" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-Regular.woff" as="font" type="font/woff" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-SemiBold.woff" as="font" type="font/woff" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
 	<link rel="stylesheet" href="./css/main.min.css">
 </head>
 
-	<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="display:none"><symbol id="accordeon" viewBox="0 0 18 10">
+<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="display:none"><symbol id="accordeon" viewBox="0 0 18 10">
 <path clip-rule="evenodd" d="M0.96967 0.46967C1.26256 0.176777 1.73744 0.176777 2.03033 0.46967L9 7.43934L15.9697 0.46967C16.2626 0.176777 16.7374 0.176777 17.0303 0.46967C17.3232 0.762563 17.3232 1.23744 17.0303 1.53033L9.53033 9.03033C9.23744 9.32322 8.76256 9.32322 8.46967 9.03033L0.96967 1.53033C0.676777 1.23744 0.676777 0.762563 0.96967 0.46967Z"/>
 </symbol><symbol id="arrow-left" viewBox="0 0 24 20"><g fill="none">
 <path fill-rule="evenodd" clip-rule="evenodd" d="M1.49012e-08 10C1.49012e-08 9.44771 0.447715 9 1 9H23C23.5523 9 24 9.44771 24 10C24 10.5523 23.5523 11 23 11H1C0.447715 11 1.49012e-08 10.5523 1.49012e-08 10Z" fill="black"/>
@@ -51,7 +47,6 @@
 <path fill-rule="evenodd" clip-rule="evenodd" d="M16.0566 8.00166C16.3664 8.32634 16.3543 8.84064 16.0296 9.15039L10.0679 14.8379C9.75376 15.1376 9.25955 15.1373 8.94569 14.8374L5.96991 11.9937C5.64549 11.6836 5.63382 11.1693 5.94384 10.8449C6.25387 10.5205 6.76818 10.5088 7.0926 10.8188L9.50751 13.1266L14.9079 7.97462C15.2326 7.66487 15.7469 7.67698 16.0566 8.00166Z" fill="#3DC03C"/>
 <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.0625C6.06395 2.0625 2.0625 6.06395 2.0625 11C2.0625 15.936 6.06395 19.9375 11 19.9375C15.936 19.9375 19.9375 15.936 19.9375 11C19.9375 6.06395 15.936 2.0625 11 2.0625ZM0.4375 11C0.4375 5.16649 5.16649 0.4375 11 0.4375C16.8335 0.4375 21.5625 5.16649 21.5625 11C21.5625 16.8335 16.8335 21.5625 11 21.5625C5.16649 21.5625 0.4375 16.8335 0.4375 11Z" fill="#3DC03C"/>
 </g></symbol></svg>
-</head>
 
 <body>
 	<div class="container">
@@ -82,10 +77,10 @@
 
 	<div class="links-container swiper-container">
 		<div class="page-links swiper-wrapper">
-			<a class="swiper-slide active" href="/about.html">О нас</a>
+			<a class="swiper-slide active" href="#">Тарифы</a>
 			<a class="swiper-slide" href="/index.html">Главная</a>
+			<a class="swiper-slide" href="/about.html">О нас</a>
 			<a class="swiper-slide" href="#">Услуги</a>
-			<a class="swiper-slide" href="/tarifs.html">Тарифы</a>
 			<a class="swiper-slide" href="#">Условия</a>
 			<a class="swiper-slide" href="#">Интернет магазины</a>
 			<a class="swiper-slide" href="#">FAQ</a>
@@ -93,92 +88,105 @@
 		</div>
 	</div>
 
+
 	<div class="container">
 
-		<div class="about-image">
-			<picture>
-				<source srcset="./images/advert2.avif">
-				<img src="./images/advert2.jpg" alt="О нас" width="400" height="318">
-			</picture>
-		</div>
-
-		<section class="about">
-
-			<h1>О компании</h1>
-
-			<p><span>YUMECS —</span> доставка посылок грузов и интернет заказов легко
-				и удобно. Услуги осуществляются любым удобным для Вас способом: авиа, авто.Доставляем из России, Турции,
-				США, Кореи, Китая, Малайзии и Японии по всему Узбекистану
-			</p>
-
-			<div class="about__desc">
-				<svg width="21" height="21">
-					<use xlink:href="#success"></use>
-				</svg>
-				<p>Система оповещения</p>
+		<section class="tarifs">
+			<h1>Тарифы</h1>
+			<div class="tarifs__about">
+				<div class="tarifs__about-wrapper">
+					<p>Россия</p>
+					<svg width="10" height="2">
+						<use xlink:href="#line"></use>
+					</svg>
+					<p>Узбекистан</p>
+				</div>
+				<a href="/tarifs-inner.html">подробнее</a>
 			</div>
-
-			<div class="about__desc">
-				<svg width="21" height="21">
-					<use xlink:href="#success"></use>
-				</svg>
-				<p>Пунктуальность</p>
+			<div class="tarifs__about">
+				<div class="tarifs__about-wrapper">
+					<p>Турция</p>
+					<svg width="10" height="2">
+						<use xlink:href="#line"></use>
+					</svg>
+					<p>Узбекистан</p>
+				</div>
+				<a href="/tarifs-inner.html">подробнее</a>
 			</div>
-
-			<div class="about__desc">
-				<svg width="21" height="21">
-					<use xlink:href="#success"></use>
-				</svg>
-				<p>Безопасность</p>
+			<div class="tarifs__about">
+				<div class="tarifs__about-wrapper">
+					<p>США</p>
+					<svg width="10" height="2">
+						<use xlink:href="#line"></use>
+					</svg>
+					<p>Узбекистан</p>
+				</div>
+				<a href="/tarifs-inner.html">подробнее</a>
 			</div>
-
-			<div class="about__desc">
-				<svg width="21" height="21">
-					<use xlink:href="#success"></use>
-				</svg>
-				<p>Отличный сервис</p>
+			<div class="tarifs__about">
+				<div class="tarifs__about-wrapper">
+					<p>Китай</p>
+					<svg width="10" height="2">
+						<use xlink:href="#line"></use>
+					</svg>
+					<p>Узбекистан</p>
+				</div>
+				<a href="/tarifs-inner.html">подробнее</a>
 			</div>
-
-			<div class="about__desc">
-				<svg width="21" height="21">
-					<use xlink:href="#success"></use>
-				</svg>
-				<p>Таможенно правовое сопровождение</p>
+			<div class="tarifs__about">
+				<div class="tarifs__about-wrapper">
+					<p>Корея</p>
+					<svg width="10" height="2">
+						<use xlink:href="#line"></use>
+					</svg>
+					<p>Узбекистан</p>
+				</div>
+				<a href="/tarifs-inner.html">подробнее</a>
 			</div>
-
-		</section>
-
-		<section class="partners">
-
-			<h3>Партнеры</h3>
-
-			<div class="partners-wrapper">
-				<a href="#">
-					<picture>
-						<source srcset="./images/partners1.avif">
-						<img src="./images/partners1.jpg" alt="наши портнеры" width="137" height="67">
-					</picture>
-				</a>
-				<a href="#">
-					<picture>
-						<source srcset="./images/partners2.avif">
-						<img src="./images/partners2.jpg" alt="наши портнеры" width="140" height="70">
-					</picture>
-				</a>
-				<a href="#">
-					<picture>
-						<source srcset="./images/partners3.avif">
-						<img src="./images/partners3.jpg" alt="наши портнеры" width="137" height="67">
-					</picture>
-				</a>
-				<a href="#">
-					<picture>
-						<source srcset="./images/partners4.avif">
-						<img src="./images/partners4.jpg" alt="наши портнеры" width="140" height="70">
-					</picture>
-				</a>
+			<div class="tarifs__about">
+				<div class="tarifs__about-wrapper">
+					<p>Малазия</p>
+					<svg width="10" height="2">
+						<use xlink:href="#line"></use>
+					</svg>
+					<p>Узбекистан</p>
+				</div>
+				<a href="/tarifs-inner.html">подробнее</a>
 			</div>
 		</section>
+
+
+		<form action="#" method="post" id="calculation">
+			<h3>Расчитать стоимость</h3>
+			<label class="select" for="tarifs">
+
+				<select name="tarifs" id="tarifs">
+					<option value="" disabled="disabled" selected="selected" hidden>Тарифы</option>
+					<option value="base">Базовый</option>
+					<option value="avto">Авто</option>
+				</select>
+
+
+				<svg width="17" height="9">
+					<use xlink:href="#accordeon"></use>
+				</svg>
+
+			</label>
+			<label for="weight">
+				<input type="number" id="weight" name="weight" required min="0" max="1000" placeholder="вес (кг)">
+			</label>
+			<label for="height">
+				<input type="number" id="height" name="height" required min="0" max="1000" placeholder="высота (см)">
+			</label>
+			<label for="width">
+				<input type="number" id="width" name="width" required min="0" max="1000" placeholder="высота (см)">
+			</label>
+			<label for="length">
+				<input type="number" id="length" name="length" required min="0" max="1000" placeholder="высота (см)">
+			</label>
+			<button type="button">Расчитать</button>
+			<button type="reset">Сбросить</button>
+		</form>
 
 	</div>
 
