--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 	<link rel="stylesheet" href="./css/main.min.css">
 </head>
 
-<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="display:none"><symbol id="arrow-left" viewBox="0 0 24 20"><g fill="none">
+<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="display:none"><symbol id="accordeon" viewBox="0 0 18 10">
+<path clip-rule="evenodd" d="M0.96967 0.46967C1.26256 0.176777 1.73744 0.176777 2.03033 0.46967L9 7.43934L15.9697 0.46967C16.2626 0.176777 16.7374 0.176777 17.0303 0.46967C17.3232 0.762563 17.3232 1.23744 17.0303 1.53033L9.53033 9.03033C9.23744 9.32322 8.76256 9.32322 8.46967 9.03033L0.96967 1.53033C0.676777 1.23744 0.676777 0.762563 0.96967 0.46967Z"/>
+</symbol><symbol id="arrow-left" viewBox="0 0 24 20"><g fill="none">
 <path fill-rule="evenodd" clip-rule="evenodd" d="M1.49012e-08 10C1.49012e-08 9.44771 0.447715 9 1 9H23C23.5523 9 24 9.44771 24 10C24 10.5523 23.5523 11 23 11H1C0.447715 11 1.49012e-08 10.5523 1.49012e-08 10Z" fill="black"/>
 <path fill-rule="evenodd" clip-rule="evenodd" d="M10.7071 0.292893C11.0976 0.683417 11.0976 1.31658 10.7071 1.70711L2.41421 10L10.7071 18.2929C11.0976 18.6834 11.0976 19.3166 10.7071 19.7071C10.3166 20.0976 9.68342 20.0976 9.29289 19.7071L0.292893 10.7071C-0.0976311 10.3166 -0.0976311 9.68342 0.292893 9.29289L9.29289 0.292893C9.68342 -0.0976311 10.3166 -0.0976311 10.7071 0.292893Z" fill="black"/>
 </g></symbol><symbol id="arrow-right" viewBox="0 0 24 20"><g fill="none">
@@ -39,6 +41,8 @@
 </g></symbol><symbol id="close" viewBox="0 0 20 20"><g fill="none">
 <path fill-rule="evenodd" clip-rule="evenodd" d="M19.7071 0.292893C20.0976 0.683417 20.0976 1.31658 19.7071 1.70711L1.70711 19.7071C1.31658 20.0976 0.683417 20.0976 0.292893 19.7071C-0.0976311 19.3166 -0.0976311 18.6834 0.292893 18.2929L18.2929 0.292893C18.6834 -0.0976311 19.3166 -0.0976311 19.7071 0.292893Z" fill="#1F2F43"/>
 <path fill-rule="evenodd" clip-rule="evenodd" d="M0.292893 0.292893C0.683417 -0.0976311 1.31658 -0.0976311 1.70711 0.292893L19.7071 18.2929C20.0976 18.6834 20.0976 19.3166 19.7071 19.7071C19.3166 20.0976 18.6834 20.0976 18.2929 19.7071L0.292893 1.70711C-0.0976311 1.31658 -0.0976311 0.683417 0.292893 0.292893Z" fill="#1F2F43"/>
+</g></symbol><symbol id="line" viewBox="0 0 10 3"><g fill="none">
+<path d="M9.968 0.279999V2.128H0.392V0.279999H9.968Z" fill="#1F2F43"/>
 </g></symbol><symbol id="success" viewBox="0 0 22 22"><g fill="none">
 <path fill-rule="evenodd" clip-rule="evenodd" d="M16.0566 8.00166C16.3664 8.32634 16.3543 8.84064 16.0296 9.15039L10.0679 14.8379C9.75376 15.1376 9.25955 15.1373 8.94569 14.8374L5.96991 11.9937C5.64549 11.6836 5.63382 11.1693 5.94384 10.8449C6.25387 10.5205 6.76818 10.5088 7.0926 10.8188L9.50751 13.1266L14.9079 7.97462C15.2326 7.66487 15.7469 7.67698 16.0566 8.00166Z" fill="#3DC03C"/>
 <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.0625C6.06395 2.0625 2.0625 6.06395 2.0625 11C2.0625 15.936 6.06395 19.9375 11 19.9375C15.936 19.9375 19.9375 15.936 19.9375 11C19.9375 6.06395 15.936 2.0625 11 2.0625ZM0.4375 11C0.4375 5.16649 5.16649 0.4375 11 0.4375C16.8335 0.4375 21.5625 5.16649 21.5625 11C21.5625 16.8335 16.8335 21.5625 11 21.5625C5.16649 21.5625 0.4375 16.8335 0.4375 11Z" fill="#3DC03C"/>
@@ -77,7 +81,7 @@
 			<a class="swiper-slide active" href="/index.html">Главная</a>
 			<a class="swiper-slide" href="/about.html">О нас</a>
 			<a class="swiper-slide" href="#">Услуги</a>
-			<a class="swiper-slide" href="#">Тарифы</a>
+			<a class="swiper-slide" href="/tarifs.html">Тарифы</a>
 			<a class="swiper-slide" href="#">Условия</a>
 			<a class="swiper-slide" href="#">Интернет магазины</a>
 			<a class="swiper-slide" href="#">FAQ</a>
@@ -117,7 +121,7 @@
 
 </section>
 
-		<a href="#" class="calculation">
+		<a href="/tarifs.html#calculation" class="calculation">
 	<p>рассчитать стоимость товара</p>
 	<svg width="9" height="17">
 		<use xlink:href="#arrow-small"></use>
