--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 		<div class="nav__logo">
 			<a href="#">
 				<picture>
-					<source srcset="/images/index/avtr.avif">
-					<img src="/images/index/avtr.png" alt="avatar" width="43" height="43">
+					<source srcset="./images/index/avtr.avif">
+					<img src="./images/index/avtr.png" alt="avatar" width="43" height="43">
 				</picture>
 				<span>userName</span>
 			</a>
@@ -78,10 +78,10 @@
 
 	<div class="links-container swiper-container">
 		<div class="swiper-wrapper page-links">
-			<a class="swiper-slide active" href="/index.html">Главная</a>
-			<a class="swiper-slide" href="/about.html">О нас</a>
+			<a class="swiper-slide active" href="./index.html">Главная</a>
+			<a class="swiper-slide" href="./about.html">О нас</a>
 			<a class="swiper-slide" href="#">Услуги</a>
-			<a class="swiper-slide" href="/tarifs.html">Тарифы</a>
+			<a class="swiper-slide" href="./tarifs.html">Тарифы</a>
 			<a class="swiper-slide" href="#">Условия</a>
 			<a class="swiper-slide" href="#">Интернет магазины</a>
 			<a class="swiper-slide" href="#">FAQ</a>
@@ -121,7 +121,7 @@
 
 </section>
 
-		<a href="/tarifs.html#calculation" class="calculation">
+		<a href="./tarifs.html#calculation" class="calculation">
 	<p>рассчитать стоимость товара</p>
 	<svg width="9" height="17">
 		<use xlink:href="#arrow-small"></use>
