--- a/src/html/pages/tarifs.html
+++ b/src/html/pages/tarifs.html
@@ -35,8 +35,8 @@
 	<div class="swiper-container links-container">
 		<div class="page-links swiper-wrapper">
 			<a class="swiper-slide active" href="#">Тарифы</a>
-			<a class="swiper-slide" href="/index.html">Главная</a>
-			<a class="swiper-slide" href="/about.html">О нас</a>
+			<a class="swiper-slide" href="./index.html">Главная</a>
+			<a class="swiper-slide" href="./about.html">О нас</a>
 			<a class="swiper-slide" href="#">Услуги</a>
 			<a class="swiper-slide" href="#">Условия</a>
 			<a class="swiper-slide" href="#">Интернет магазины</a>
