--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 	<nav>
 		<div class="nav__logo">
-			<a href="#">
+			<a href="./profile.html">
 				<picture>
 					<source srcset="./images/index/avtr.avif">
 					<img src="./images/index/avtr.png" alt="avatar" width="43" height="43">
@@ -93,8 +93,8 @@
 	<div class="container">
 
 		<section class="points">
-	
-	<a href="#" class="points-count points-col1">
+
+	<a href="./profile.html" class="points-count points-col1">
 		<b>баллы</b>
 		<svg width="9" height="17">
 			<use xlink:href="#arrow-small"></use>
