--- a/index.html
+++ b/index.html
@@ -174,54 +174,66 @@
 	</div>
 
 	<div class="active tabs__about" data-tab-content="order">
+		<h3>Заказ</h3>
 		<div class="tabs__about-head">
-			<h3>Заказ</h3>
-			<p>Трекер доставки </p>
-		</div>
-		<div class="tabs__about-info">
-			<div class="point-decor"></div>
-			<b>Принят на Склад</b>
-			<span>12 Марта</span>
-		</div>
-		<div class="tabs__about-info">
-			<div class="point-decor"></div>
-			<b>Упакован и Оформлен</b>
-			<span>12 Марта</span>
-		</div>
-		<div class="tabs__about-info in-active">
-			<div class="point-decor"></div>
-			<b>Отправлен</b>
-			<span>12 Марта</span>
-		</div>
-		<div class="tabs__about-info in-active">
-			<div class="point-decor"></div>
-			<b>В Пути</b>
-			<span>12 Марта</span>
-		</div>
-		<div class="tabs__about-info in-active">
-			<div class="point-decor"></div>
-			<b>На Таможне</b>
-			<span>12 Марта</span>
-		</div>
-		<div class="tabs__about-info in-active">
-			<div class="point-decor"></div>
-			<b>Статус Оплачен</b>
-			<span>12 Марта</span>
-		</div>
-		<div class="tabs__about-info in-active">
-			<div class="point-decor"></div>
-			<b>Готов к выдаче!</b>
-			<span>12 Марта</span>
-		</div>
-		<div class="tabs__about-info in-active">
-			<div class="point-decor"></div>
-			<b>На Доставке</b>
-			<span>12 Марта</span>
-		</div>
-		<div class="tabs__about-info in-active">
-			<div class="point-decor"></div>
-			<b>Доставлен</b>
-			<span>12 Марта</span>
+			<div class="tabs__about-id">
+				<b>Id заказа</b>
+				<svg width="17" height="9">
+					<use xlink:href="#accordeon"></use>
+				</svg>
+			</div>
+			<div class="tabs__about-id">
+				<b id="productId">#999993</b>
+				<span>Китай</span>
+			</div>
+
+			<div class="tabs__about-wrapper">
+				<div class="tabs__about-info">
+					<div class="point-decor"></div>
+					<b>Принят на Склад</b>
+					<span>12 Марта</span>
+				</div>
+				<div class="tabs__about-info">
+					<div class="point-decor"></div>
+					<b>Упакован и Оформлен</b>
+					<span>12 Марта</span>
+				</div>
+				<div class="tabs__about-info in-active">
+					<div class="point-decor"></div>
+					<b>Отправлен</b>
+					<span>12 Марта</span>
+				</div>
+				<div class="tabs__about-info in-active">
+					<div class="point-decor"></div>
+					<b>В Пути</b>
+					<span>12 Марта</span>
+				</div>
+				<div class="tabs__about-info in-active">
+					<div class="point-decor"></div>
+					<b>На Таможне</b>
+					<span>12 Марта</span>
+				</div>
+				<div class="tabs__about-info in-active">
+					<div class="point-decor"></div>
+					<b>Статус Оплачен</b>
+					<span>12 Марта</span>
+				</div>
+				<div class="tabs__about-info in-active">
+					<div class="point-decor"></div>
+					<b>Готов к выдаче!</b>
+					<span>12 Марта</span>
+				</div>
+				<div class="tabs__about-info in-active">
+					<div class="point-decor"></div>
+					<b>На Доставке</b>
+					<span>12 Марта</span>
+				</div>
+				<div class="tabs__about-info in-active">
+					<div class="point-decor"></div>
+					<b>Доставлен</b>
+					<span>12 Марта</span>
+				</div>
+			</div>
 		</div>
 	</div>
 
