--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
 </section>
 
-		<a href="./tarifs.html#calculation" class="calculation">
+		<a href="https://naumovn808.github.io/yumecs/tarifs.html#calculation" class="calculation">
 	<p>рассчитать стоимость товара</p>
 	<svg width="9" height="17">
 		<use xlink:href="#arrow-small"></use>
