--- a/src/html/pages/about.html
+++ b/src/html/pages/about.html
@@ -39,10 +39,10 @@
 
 	<div class="swiper-container links-container">
 		<div class="page-links swiper-wrapper">
-			<a class="swiper-slide active" href="/about.html">О нас</a>
-			<a class="swiper-slide" href="/index.html">Главная</a>
-			<a class="swiper-slide" href="#">Услуги</a>
-			<a class="swiper-slide" href="/tarifs.html">Тарифы</a>
+			<a class="swiper-slide active" href="./about.html">О нас</a>
+			<a class="swiper-slide" href="./index.html">Главная</a>
+			<a class="swiper-slide" href="./servises.html">Услуги</a>
+			<a class="swiper-slide" href="./tarifs.html">Тарифы</a>
 			<a class="swiper-slide" href="#">Условия</a>
 			<a class="swiper-slide" href="#">Интернет магазины</a>
 			<a class="swiper-slide" href="#">FAQ</a>
