--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -10,7 +10,7 @@
 		<div class="page-links swiper-wrapper">
 			<a class="swiper-slide active" href="./index.html">Главная</a>
 			<a class="swiper-slide" href="./about.html">О нас</a>
-			<a class="swiper-slide" href="#">Услуги</a>
+			<a class="swiper-slide" href="./servises.html">Услуги</a>
 			<a class="swiper-slide" href="./tarifs.html">Тарифы</a>
 			<a class="swiper-slide" href="#">Условия</a>
 			<a class="swiper-slide" href="#">Интернет магазины</a>
