--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		<div class="swiper-wrapper page-links">
 			<a class="swiper-slide active" href="./index.html">Главная</a>
 			<a class="swiper-slide" href="./about.html">О нас</a>
-			<a class="swiper-slide" href="#">Услуги</a>
+			<a class="swiper-slide" href="./servises.html">Услуги</a>
 			<a class="swiper-slide" href="./tarifs.html">Тарифы</a>
 			<a class="swiper-slide" href="#">Условия</a>
 			<a class="swiper-slide" href="#">Интернет магазины</a>
@@ -121,7 +121,7 @@
 
 </section>
 
-		<a href="https://naumovn808.github.io/yumecs/tarifs.html#calculation" class="calculation">
+		<a href="./tarifs.html#calculation" class="calculation">
 	<p>рассчитать стоимость товара</p>
 	<svg width="9" height="17">
 		<use xlink:href="#arrow-small"></use>
