--- a/tarifs.html
+++ b/tarifs.html
@@ -77,10 +77,10 @@
 
 	<div class="links-container swiper-container">
 		<div class="page-links swiper-wrapper">
-			<a class="swiper-slide active" href="#">Тарифы</a>
+			<a class="swiper-slide active" href="./tarifs.html">Тарифы</a>
 			<a class="swiper-slide" href="./index.html">Главная</a>
 			<a class="swiper-slide" href="./about.html">О нас</a>
-			<a class="swiper-slide" href="#">Услуги</a>
+			<a class="swiper-slide" href="./servises.html">Услуги</a>
 			<a class="swiper-slide" href="#">Условия</a>
 			<a class="swiper-slide" href="#">Интернет магазины</a>
 			<a class="swiper-slide" href="#">FAQ</a>
